--- a/Thi/Practive/Practive.csproj
+++ b/Thi/Practive/Practive.csproj
@@ -45,6 +45,10 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThiThucHanh\Mobile.cs" />
+    <Compile Include="ThiThucHanh\Product.cs" />
+    <Compile Include="ThiThucHanh\Book.cs" />
+    <Compile Include="ThiThucHanh\Run.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
